// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateTransactionGroupModal Screen renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={
    Array [
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "zIndex": 1000,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "backgroundColor": "#000",
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "height": 1267.3,
            "opacity": 0,
            "overflow": "hidden",
            "width": 675,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "padding": 14,
                "paddingHorizontal": 18,
              },
              Object {
                "alignItems": "flex-start",
              },
              Object {
                "backgroundColor": "#F9F9FB",
                "borderBottomWidth": 0.5,
                "borderColor": "#DAD9DC",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#151822",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "500",
                },
                undefined,
              ]
            }
          >
            Add Transaction Group
          </Text>
        </View>
        <RCTScrollView>
          <View>
            <View
              style={
                Array [
                  Object {
                    "paddingHorizontal": 18,
                    "paddingVertical": 24,
                  },
                  Object {
                    "paddingTop": 0,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "fontSize": 15,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                      "marginTop": 10,
                      "textAlign": "center",
                    }
                  }
                >
                   Set Transaction Group Title 
                </Text>
                <TextInput
                  allowFontScaling={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Transaction Group Name"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "borderColor": "#eaeaea",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "fontSize": 14,
                      "height": 43,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginRight": 5,
                      "marginTop": 5,
                      "paddingLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <Text
                style={
                  Object {
                    "fontSize": 15,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                    "marginTop": 10,
                    "textAlign": "center",
                  }
                }
              >
                 Items 
              </Text>
              <Text>
                 No Items Yet 
              </Text>
              <Text
                style={
                  Object {
                    "fontSize": 15,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                    "marginTop": 10,
                    "textAlign": "center",
                  }
                }
              >
                 Assign Users to Transaction Group 
              </Text>
              <View
                onLayout={[Function]}
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 55,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "marginLeft": 15,
                        "marginTop": 15,
                      }
                    }
                  >
                    <Text />
                  </View>
                  <TextInput
                    allowFontScaling={true}
                    clearButtonMode="always"
                    onChangeText={[Function]}
                    placeholder="Search"
                    placeholderTextColor="#757575"
                    rejectResponderTermination={true}
                    style={
                      Object {
                        "borderColor": "#00a2dd",
                        "borderRadius": 5,
                        "borderWidth": 1,
                        "height": 35,
                        "margin": 0,
                        "marginLeft": -25,
                        "marginTop": 10,
                        "padding": 5,
                        "paddingLeft": 30,
                        "width": 730,
                      }
                    }
                    underlineColorAndroid="transparent"
                  />
                </View>
                <RCTScrollView
                  style={
                    Object {
                      "height": 130,
                      "padding": 5,
                    }
                  }
                >
                  <View />
                </RCTScrollView>
              </View>
              <View
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-around",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#3897f1",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                          "width": 262.5,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Add Item
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#3897f1",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                          "width": 262.5,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Upload Bill
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-around",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#5cd07f",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                          "width": 262.5,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Submit
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#e74040",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                          "width": 262.5,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Cancel
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard Screen renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "rgb(0, 102, 255)",
      "borderRadius": 5,
      "borderWidth": 1,
      "marginEnd": 20,
      "marginStart": 20,
      "marginTop": 20,
      "opacity": 1,
      "paddingHorizontal": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 22,
          "fontWeight": "bold",
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "500",
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "500",
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      Name not found
    </Text>
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "500",
          "marginBottom": 5,
          "marginTop": 5,
        }
      }
    >
      PLN
    </Text>
  </View>
</View>
`;

exports[`TransactionManagementView Screen renders correctly 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": 1259,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 40,
        "fontWeight": "800",
        "marginBottom": 15,
        "marginTop": 30,
        "textAlign": "center",
      }
    }
  >
    Transactions
  </Text>
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 3,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": false,
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#5cd07f",
            "borderColor": "#2089dc",
            "borderRadius": 5,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 45,
            "justifyContent": "center",
            "marginLeft": 25,
            "marginRight": 25,
            "marginTop": 10,
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "paddingVertical": 1,
              "textAlign": "center",
            }
          }
        >
          Create Transaction Group
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      Object {
        "paddingBottom": 95,
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "rgb(0, 102, 255)",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginEnd": 20,
            "marginStart": 20,
            "marginTop": 20,
            "opacity": 1,
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 22,
                "fontWeight": "bold",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Zakupy Carefour
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            21/01/2022
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Adam
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            45
            PLN
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "rgb(0, 102, 255)",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginEnd": 20,
            "marginStart": 20,
            "marginTop": 20,
            "opacity": 1,
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 22,
                "fontWeight": "bold",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Wyjście do restauracji
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            20/01/2022
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Edward
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            427
            PLN
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "rgb(0, 102, 255)",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginEnd": 20,
            "marginStart": 20,
            "marginTop": 20,
            "opacity": 1,
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 22,
                "fontWeight": "bold",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Wyjście do restauracji
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            20/01/2022
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Edward
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            427
            PLN
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "rgb(0, 102, 255)",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginEnd": 20,
            "marginStart": 20,
            "marginTop": 20,
            "opacity": 1,
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 22,
                "fontWeight": "bold",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Wyjście do restauracji
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            20/01/2022
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            Edward
          </Text>
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 5,
                "marginTop": 5,
              }
            }
          >
            427
            PLN
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <footer
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3333ff",
        "bottom": "0",
        "display": "flex",
        "height": "75px",
        "justifyContent": "space-around",
        "left": "0",
        "position": "fixed",
        "width": "100%",
        "zIndex": 100,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <img
        alt=" "
        src={Object {}}
        style={
          Object {
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <Text>
         Tasks 
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <img
        alt=" "
        src={Object {}}
        style={
          Object {
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <Text>
         Transactions 
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <img
        alt=" "
        src={Object {}}
        style={
          Object {
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <Text>
         Home 
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <img
        alt=" "
        src={Object {}}
        style={
          Object {
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <Text>
         Flatmates 
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <img
        alt=" "
        src={Object {}}
        style={
          Object {
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <Text>
         Calendar 
      </Text>
    </View>
  </footer>
</View>
`;

exports[`UploadBillModal Screen renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={
    Array [
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "zIndex": 1000,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "backgroundColor": "#000",
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "height": null,
            "opacity": 0,
            "overflow": "hidden",
            "width": 675,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "padding": 14,
                "paddingHorizontal": 18,
              },
              Object {
                "alignItems": "flex-start",
              },
              Object {
                "backgroundColor": "#F9F9FB",
                "borderBottomWidth": 0.5,
                "borderColor": "#DAD9DC",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#151822",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "500",
                },
                undefined,
              ]
            }
          >
            Upload Bill
          </Text>
        </View>
        <RCTScrollView>
          <View>
            <View
              style={
                Array [
                  Object {
                    "paddingHorizontal": 18,
                    "paddingVertical": 24,
                  },
                  Object {
                    "paddingTop": 0,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fff",
                    "justifyContent": "center",
                    "padding": 50,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#3897f1",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Choose Image
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 3,
                    },
                    undefined,
                    false,
                  ]
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#5cd07f",
                        "borderColor": "#2089dc",
                        "borderRadius": 5,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 45,
                        "justifyContent": "center",
                        "marginLeft": 25,
                        "marginRight": 25,
                        "marginTop": 10,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "white",
                          "fontSize": 18,
                          "paddingVertical": 1,
                          "textAlign": "center",
                        }
                      }
                    >
                      Send
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 3,
                    },
                    undefined,
                    false,
                  ]
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#e74040",
                        "borderColor": "#2089dc",
                        "borderRadius": 5,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 45,
                        "justifyContent": "center",
                        "marginLeft": 25,
                        "marginRight": 25,
                        "marginTop": 10,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "white",
                          "fontSize": 18,
                          "paddingVertical": 1,
                          "textAlign": "center",
                        }
                      }
                    >
                      Cancel
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</View>
`;
